added data tables

--- a/visual.html
+++ b/visual.html
@@ -187,6 +187,204 @@
         </table>
     </div>
 
+    <div style="display: none" id="jBox-about-data-grab">
+        <h4>Sign Frequency</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Sign Frequency (M)</td>
+                <td>Mean subjective frequency rating (as rated by both native and non-native signers)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (SD)</td>
+                <td>Subjective frequency rating standard deviation (as rated by both native and non-native signers)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (Z)</td>
+                <td>Standardized subjective frequency rating (z)  (as rated by both native and non-native signers)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (N)</td>
+                <td>Number of participants on which average frequency rating is based  (both native and non-native signers)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (M, Native)</td>
+                <td>Mean subjective frequency rating (as rated by native ASL signers only)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (SD, Native)</td>
+                <td>Subjective frequency rating standard deviation (as rated by native ASL signers only)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (Z, Native)</td>
+                <td>Standardized subjective frequency rating (z) (as rated by native ASL signers only)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (N, Native)</td>
+                <td>Number of participants on which average frequency rating is based (native ASL signers only)</td>
+            </tr>
+        </table>
+
+        <h4>Iconicity</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Iconicity (M)</td>
+                <td>Mean iconicity rating (as rated by hearing non-signers)</td>
+            </tr>
+            <tr>
+                <td>Iconicity (SD)</td>
+                <td>Iconicity rating standard deviation  (as rated by hearing non-signers)</td>
+            </tr>
+            <tr>
+                <td>Iconicity (Z)</td>
+                <td>Standardized iconicity rating (z)  (as rated by hearing non-signers)</td>
+            </tr>
+            <tr>
+                <td>Iconicity (N)</td>
+                <td>Number of participants on which mean iconicity rating is based (hearing non-signers)</td>
+            </tr>
+        </table>
+
+        <h4>Lexical Properties</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Lexical Class</td>
+                <td>The sign's lexical class</td>
+            </tr>
+            <tr>
+                <td>Compound</td>
+                <td>"1" indicates that the sign includes more than one free morpheme</td>
+            </tr>
+            <tr>
+                <td>Initialized</td>
+                <td>"1" indicates that the handshape of the sign is the first letter of the English translation</td>
+            </tr>
+            <tr>
+                <td>Fingerspelled Loan Sign</td>
+                <td>"1" indicates that the sign includes more than one letter of the manual alphabet</td>
+            </tr>
+        </table>
+
+        <h4>Phonological Properties</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Sign Type</td>
+                <td>Symmetry of the hands according to Battison's sign types</td>
+            </tr>
+            <tr>
+                <td>Selected Fingers</td>
+                <td>Fingers that are moving or foregrounded in the first morpheme of the sign; Thumb is ignored unless it is the only selected finger in the sign</td>
+            </tr>
+            <tr>
+                <td>Flexion</td>
+                <td>Aperture of the selected fingers of the dominant hand at sign onset</td>
+            </tr>
+            <tr>
+                <td>Major Location</td>
+                <td>General location of the dominant hand at sign onset</td>
+            </tr>
+            <tr>
+                <td>Minor Location</td>
+                <td>Specific location of the dominant hand at sign onset</td>
+            </tr>
+            <tr>
+                <td>Movement</td>
+                <td>Path movement of the first morpheme in the sign</td>
+            </tr>
+        </table>
+
+        <h4>Sub-Lexical Frequency Properties</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Sign Type Frequency</td>
+                <td>The count of other signs in which the sign type occurs</td>
+            </tr>
+            <tr>
+                <td>Major Location Frequency</td>
+                <td>The count of other signs in which the major location occurs</td>
+            </tr>
+            <tr>
+                <td>Selected Finger Frequency</td>
+                <td>The count of other signs in which the selected fingers occurs</td>
+            </tr>
+            <tr>
+                <td>Flexion Frequency</td>
+                <td>The count of other signs in which the flexion occurs</td>
+            </tr>
+            <tr>
+                <td>Movement Frequency</td>
+                <td>The count of other signs in which the movement occurs</td>
+            </tr>
+            <tr>
+                <td>Handshape Frequency</td>
+                <td>The count of other signs in which the combination of flexion and selected fingers occurs</td>
+            </tr>
+        </table>
+
+        <h4>Neighborhood Properties</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Minimal Neighborhood Density</td>
+                <td>Number of signs that share one or more of six coded phonological properties (sign type, major region, minor region, selected fingers, flexion, and movement) with the sign</td>
+            </tr>
+            <tr>
+                <td>Parameter-Based Neighborhood Density</td>
+                <td>Number of signs that share all four phonological properties (major region, selected fingers, flexion, and movement) with the sign</td>
+            </tr>
+            <tr>
+                <td>Maximal Neighborhood Density</td>
+                <td>Number of signs that share five or more of six coded phonological properties (sign type, major region, minor region, selected fingers, flexion, and movement)  with the sign</td>
+            </tr>
+        </table>
+
+        <h4>Alternative English Translations</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Alternative Glosses</td>
+                <td>A list of alternative glosses provided by native and non-native signers, and the percent agreement with the gloss among both native and non-native signers </td>
+            </tr>
+            <tr>
+                <td>Percent Unknown</td>
+                <td>Percentage of participants who did not know the sign (out of both native and non-native signers)</td>
+            </tr>
+            <tr>
+                <td>Percent Unknown (Native)</td>
+                <td>Percentage of participants who did not know the sign (out of native ASL signers only)</td>
+            </tr>
+            <tr>
+                <td>Gloss Confirmation</td>
+                <td>"1" indicates that English translations of ASL sign are available - see Alternative Glosses Appendix for items marked as "1"</td>
+            </tr>
+            <tr>
+                <td>Percent Gloss Agreement</td>
+                <td>Percent agreement with the dominant gloss among both native and non-native signers</td>
+            </tr>
+            <tr>
+                <td>Percent Gloss Agreement (Native)</td>
+                <td>Percent agreement with the dominant gloss among native ASL signers only</td>
+            </tr>
+        </table>
+
+        <h4>Video Information</h4>
+        <table class='about-filter-table'>
+            <tr>
+                <td>Sign Onset (ms)</td>
+                <td>The sign onset (milliseconds)</td>
+            </tr>
+            <tr>
+                <td>Sign Offset (ms)</td>
+                <td>The sign offset (milliseconds)</td>
+            </tr>
+            <tr>
+                <td>Sign Length (ms)</td>
+                <td>Duration of sign (milliseconds)</td>
+            </tr>
+            <tr>
+                <td>Clip Length (ms)</td>
+                <td>Duration of clip (milliseconds)</td>
+            </tr>
+        </table>
+    </div>
+
     <!-- container used to run sigma and filtering -->
     <div id='sigma-container'>
     </div>
