--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class='multiview'>
         <h1 id='title'><a href='visual.html'>ASL-LEX</a></h1>
         <h3 id='tagline'>A lexical database for ASL</h3>
+        <h3 id='enter'><a href='visual.html'>Enter Visualization &rArr;</a></h3>
 
         <div class='multiview_menu'>
             <ul>
@@ -40,7 +41,7 @@
 
             <h4>Advanced search – using filters</h4>
 
-            <p>You can narrow down the lexicon by applying filters (e.g., requesting a range of frequency or iconicity values) on the “Filter” tab. See the instructions on how to use filters.</p>
+            <p>You can narrow down the lexicon by applying filters (e.g., requesting a range of frequency or iconicity values) on the “Filter” tab.</p>
         </div>
 
         <div class='multiview_content' id='contact'>
@@ -90,6 +91,5 @@
     </div>
 
     <a href='visual.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
-    <a href='visual.html'><h2 id='enter'>Enter Visualization</h2></a>
 </body>
 </html>
