--- a/visual.html
+++ b/visual.html
@@ -491,6 +491,7 @@
             </div>
             <div id="data-container">
                 <p>Click on a node to see data on it.</p>
+                <p id="about-data"><a href="#">About Sign Data</a></p>
                 <iframe id="word_vid" width="100%" src="" frameborder="0"></iframe>
             </div>
         </div>
