removed link on ASLLex

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class='multiview'>
-        <h1 id='title'><a href='visual.html'>ASL-LEX</a></h1>
+        <h1 id='title'>ASL-LEX</h1>
         <h3 id='tagline'>A lexical database for ASL</h3>
         <h3 id='enter'><a href='visual.html'>Enter Visualization &rArr;</a></h3>
 
