moved download button

--- a/visual.html
+++ b/visual.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div id='filter-container'>
-                <p style='text-align: left;'><a id='about-filters' href='#'>About Filters</a> | <a href='#' onclick='removeFilters()'>Remove Filters</a> | <a href='#' id='download-popup'>Download Data</a></p>
+                <p style='text-align: center;'><a id='about-filters' href='#'>About Filters</a> | <a href='#' onclick='removeFilters()'>Remove Filters</a></p>
                 <div class='filter-box' data-role="collapsible" data-mini="true">
                     <h4>Frequency Properties</h4>
                     <ul data-role="listview">
@@ -146,6 +146,9 @@
         </div>
         <div class="zoom-btn zoom-reset">
             <img src='css/images/zoom_reset.png' />
+        </div>
+        <div class="zoom-btn download" id='download-popup'>
+            <img src='css/images/download2.png' />
         </div>
     </div>
 
