added new chrome alert, added download instructions

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <h4>Advanced search – using filters</h4>
 
             <p>You can narrow down the lexicon by applying filters (e.g., requesting a range of frequency or iconicity values) on the “Filter” tab.</p>
+
+            <h4>Downloading data</h4>
+
+            <p>To download data, select the download button at the top right corner of the visualization. Select the properties that you would like to download.</p>
+
         </div>
 
         <div class='multiview_content' id='contact'>
@@ -87,7 +92,7 @@
 
         <div class='multiview_content' id='thanks'>
             <p>Many thanks to Cindy O'Grady Farnady for modeling all of the signs and helping with data collection, to Ben Tanen for his help developing this website, and to Jennifer Feeney Petrich for her help conceptualizing and establishing the project. Thanks also to Marissa Maimone, Yvonne Xiong, Rebecca Nardulli, Adriana Alcala, Christina Massrey, Melissa Watton, Caitlyn Lahousse, Christina Ng, Jessica Mow, Laura Coughlin, and Taylor Strelevitz for their help coding lexical and phonological properties, and to Jordan Weber and Mahie Sumathipala for help preparing materials and coding. This work is supported by the National Institutes of Health DC010997 to Dr. Karen Emmorey and San Diego State University, and a Tufts University Faculty Research Award to Dr. Ariel M. Cohen-Goldberg.</p>
-        </div>    
+        </div>
     </div>
 
     <a href='visual.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
