--- a/visual.html
+++ b/visual.html
@@ -38,7 +38,7 @@
         <div class="tabcontents">
             <div id="about-container">
                 <h2>ASLLex</h2>
-                
+
                 <h3>Legend:</h3>
                 <table>
                     <tr>
@@ -185,7 +185,7 @@
 
     <div style="display: none" id="jBox-download-grab">
         <p>Please select the data you would like included in your download and the signs to be included (all signs or those remaining after filters). Download button below.</p>
-        <p><span style='color: red'>Downloading data works best on Google Chrome. It is highly suggested you use Chrome if available.</span></p>
+        <p><span style='color: red'>Download works best on Google Chrome. Other browsers are not supported.</span></p>
 
         <p><span id='select-btn'>Select All</span> | <span id='unselect-btn'>Unselect All</span></p>
         <form>
@@ -231,7 +231,7 @@
                 <td>Sign Frequency (Z, Native)</td>
                 <td>Standardized subjective frequency rating (z) (as rated by native ASL signers only)</td>
             </tr>
-            
+
         </table>
 
        <h4>Phonological Properties</h4>
