changed location of "enter visualization" link; removed "active nodes" arror; merged item from front list; added google form to download pane;

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class='multiview'>
         <h1 id='title'>ASL-LEX</h1>
         <h3 id='tagline'>A lexical database for ASL</h3>
-        <h3 id='enter'><a href='visual.html'>Enter Visualization &rArr;</a></h3>
 
         <div class='multiview_menu'>
             <ul>
@@ -93,6 +92,8 @@
         <div class='multiview_content' id='thanks'>
             <p>Many thanks to Cindy O'Grady Farnady for modeling all of the signs and helping with data collection, to Ben Tanen for his help developing this website, and to Jennifer Feeney Petrich for her help conceptualizing and establishing the project. Thanks also to Marissa Maimone, Yvonne Xiong, Rebecca Nardulli, Adriana Alcala, Christina Massrey, Melissa Watton, Caitlyn Lahousse, Christina Ng, Jessica Mow, Laura Coughlin, and Taylor Strelevitz for their help coding lexical and phonological properties, and to Jordan Weber and Mahie Sumathipala for help preparing materials and coding. This work is supported by the National Institutes of Health DC010997 to Dr. Karen Emmorey and San Diego State University, and a Tufts University Faculty Research Award to Dr. Ariel M. Cohen-Goldberg.</p>
         </div>
+
+        <a href='visual.html' id='enter_link'><h3 id='enter'>Enter Visualization</h3></a>
     </div>
 
     <a href='visual.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
